# mirrorai-render-test-assignment

./: .gitignore  README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/mirrorai/rta/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: mirrorai.cpp
app/src/main/java/com/mirrorai/rta/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/mirrorai/rta/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
